--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "postcss": "^8.4.17",
     "preact": "^10.10.6",
+    "react-icons": "^4.6.0",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.8"
   },
