--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "jsxImportSource": "preact",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "baseUrl": "./",
+    "baseUrl": "src",
     "types": [
       "vite-plugin-pwa/client"
     ],
