--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "dev:h": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "bprev": "tsc && vite build &&vite preview "
   },
   "dependencies": {
     "autoprefixer": "^10.4.12",
